# homework1_GR

./: Dockerfile  README.md
armando_controller/: CMakeLists.txt  package.xml
armando_controller/src/: arm_controller_node copy.cpp  arm_controller_node.cpp
armando_description/: CMakeLists.txt  package.xml
armando_description/config_armando/: armando_controllers.yaml  rviz_armando.rviz  standing.rviz
armando_description/launch/: armando_display.launch.py  armando_display2.launch.py
armando_description/models/armando_description/: model.sdf
armando_description/urdf/: arm.urdf  arm.urdf.xacro  armando.urdf.xacro
armando_gazebo/: CMakeLists.txt  package.xml
armando_gazebo/config_armando_gz/: armando_controllers.yaml
armando_gazebo/launch/: armando_world.launch.py
armando_gazebo/models/armando_gazebo/: model.sdf
armando_gazebo/urdf/: arm.urdf  arm.urdf.xacro  armando_camera.xacro
