<?xml version="1.0"?>
<package format="3">
  <name>armando_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo bringup for Armando</description>
  <maintainer email="emanuele.fusco2@studenti.unina.it">EmanueleFusco</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime deps (adatta se ti servono altri pacchetti) -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>armando_description</exec_depend>

  <!-- Export: ok così; NON usare path assoluti qui -->
  <export>
    <build_type>ament_cmake</build_type>
    <!-- Se vuoi far trovare modelli/mesh anche con model:// -->
<!--    <gazebo_ros gazebo_model_path="${prefix}/.."/>-->
    <!-- In alternativa potresti usare ${prefix}/.. ma questa va benissimo -->
  </export>
</package>

